Fix checkbox vertical alignment (#18)
* Fix vertical alignment

* Remove unnecessary rules

--- a/src/app/systelab-components/styles/default-theme/sass/_checkBox.scss
+++ b/src/app/systelab-components/styles/default-theme/sass/_checkBox.scss
@@ -14,14 +14,12 @@ input[type="checkbox"]:not(.slab-checkbox-not-show) + label {
 
   @include user-selection(none);
 
+  display: flex;
+  align-items: center;
   position: relative;
   padding-left: $checkbox-text-gap;
   cursor: pointer;
-  display: inline-block;
-  height: $checkbox-height;
-  line-height: $checkbox-height;
   font-size: 1rem;
-  padding-top: $top-icon;
 
   &:empty {
     padding-left: $checkbox-height;
@@ -30,24 +28,20 @@ input[type="checkbox"]:not(.slab-checkbox-not-show) + label {
   &:before {
     @include size($checkbox-height);
 
-    @include position(absolute, $top: 0, $left: 0);
+    @include position(absolute, $top: 1px, $left: 0);
 
     @include backface-visibility(hidden);
 
     content: '';
     z-index: 0;
-    box-sizing: border-box;
-    display: inline-block;
 
     text-align: center;
-    background-color: $checkbox-color;
     border-radius: 4px;
     border: solid 1px $medium-gray;
     line-height: 1em;
     color: $checkbox-color;
 
     font-weight: bold;
-    font-style: normal;
     font-family: icomoon;
     font-size: $checkbox-height - 3px;
     -webkit-font-smoothing: antialiased;
